--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -8,7 +8,7 @@
 body {
     overflow: hidden;
     font-family: Arial;
-    background: #739ec2 url(../images/bg.jpg) center no-repeat fixed;
+    background: #6e334f url(../images/bg.jpg) center no-repeat fixed;
     background-size: cover;
     font-size: 16px;
     color: #fff;
