--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -7,7 +7,7 @@
 
 body {
     overflow: hidden;
-    font-family: Arial;
+    font-family: 'Architects Daughter', cursive;
     background: #0f3652 url(../images/bg.jpg) center no-repeat fixed;
     background-size: cover;
     font-size: 16px;
