--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -5,17 +5,22 @@
     border: 0;
 }
 
+html {
+    font-size: 16px;
+}
+
 body {
     overflow: hidden;
-    font-family: 'Architects Daughter', cursive;
     background: #0f3652 url(../images/bg.jpg) center no-repeat fixed;
     background-size: cover;
-    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-size: 1rem;
     color: #fff;
 }
 
 .logo,
-.message {
+.message,
+.copyright {
     position: absolute;
     opacity: .85;
 }
@@ -31,9 +36,16 @@ body {
 .message {
     bottom: 15%;
     right: 10%;
-    font-size: 3rem;
-    font-weight: 400;
-    font-style: italic;
+    font: 400 italic 3rem 'Architects Daughter', cursive;
+}
+
+.copyright {
+    bottom: 10px;
+    left: 50%;
+    padding: 3px 5px;
+    background: rgba(0,0,0, .5);
+    font-size: .9rem;
+    transform: translateX(-50%);
 }
 
 @media only screen and (max-width: 767px) {
